# uart

./: Cargo.toml  README.md  config.toml
src/: app.rs  canvas.rs  controller.rs  main.rs  model.rs  util.rs  view.rs
src/app/: canvas.rs  cmd_line.rs  config.rs  keybind.rs  keybind_manager.rs  mode.rs  shape.rs
src/app/canvas/: cursor.rs  handler.rs
src/app/mode/: command.rs  dummy.rs  make_path.rs  make_rect.rs  make_text.rs  normal.rs  select.rs
src/app/shape/: path.rs  rect.rs  shape_id.rs  style.rs  text.rs
src/canvas/: shape.rs  shape_id.rs
src/canvas/shape/: rect.rs  text.rs
src/controller/: command.rs  command_stream.rs  mode.rs
src/controller/mode/: command.rs  make_rect.rs  make_text.rs  normal.rs
src/model/: shape.rs
src/model/shape/: line.rs  rect.rs
src/util/: coord.rs  direction.rs  ext.rs  id.rs  onetime_widget.rs  size.rs
