[package]
name = "uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
crossterm = "0.25.0"
thiserror = "1.0.38"
tui = { version = "0.19.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.10"

[registries.crates-io]
protocol = 'sparse'
