[package]
name = "uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
crossterm = "0.28.1"
ratatui = "0.29.0"
thiserror = "2.0.3"
unicode-width = "0.2.0"

[registries.crates-io]
protocol = 'sparse'
